@startuml
interface IFactory{
Operation CreateOperation()
}
together {
class AddFactory
class SubFactory
class MulFactory
class DivFactory
}
abstract class Operation{
double GetResult()
}
together {
class OperationAdd
class OperationSub
class OperationMul
class OperationDiv
}
AddFactory..-up-|>IFactory
SubFactory..-up-|>IFactory
MulFactory..-up-|>IFactory
DivFactory..-up-|>IFactory
AddFactory..>OperationAdd:2
SubFactory..>OperationSub:return
MulFactory..>OperationMul:return
DivFactory..>OperationDiv:return
OperationAdd--down|>Operation
OperationSub--down|>Operation
OperationMul--down|>Operation
OperationDiv--down|>Operation
Class Main
Main..>AddFactory:1
Main..>OperationAdd:3

@enduml
